--- a/style.css
+++ b/style.css
@@ -11,3 +11,25 @@ body {
   background: #000;
   overflow: hidden;
 }
+.glowing {
+  position: relative;
+  width: 750px;
+  height: 750px;
+}
+.glowing span {
+  position: absolute;
+  top: calc(80px * var(--i));
+  left: calc(80px * var(--i));
+  bottom: calc(80px * var(--i));
+  right: calc(80px * var(--i));
+}
+.glowing span::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: -8px;
+  width: 15px;
+  height: 15px;
+  background: #f00;
+  border-radius: 50%;
+}
