--- a/style.css
+++ b/style.css
@@ -15,6 +15,22 @@ body {
   position: relative;
   min-width: 750px;
   height: 750px;
+  margin: -150px;
+  transform-origin: right;
+  animation: colorChange 5s linear infinite;
+}
+.glowing:nth-child(even) {
+  transform-origin: left;
+}
+@keyframes colorChange {
+  0% {
+    filter: hue-rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    filter: hue-rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 .glowing span {
   position: absolute;
